<resources>
    <string name="app_name">Stir</string>
    <string name="authorization_failed_message">Oops! Something went wrong. Please try again.</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">LOGIN</string>
    <string name="login_sign_up_textview">SIGN UP</string>
    <string name="detail_posted_by_text">Posted by:</string>
    <string name="sign_up_checkbox_acknowledgement">I acknowledge I am 18 years or older.</string>
    <string name="profile_coffee_bean_count">14</string>
    <string name="profile_fragment_username_hint">stir_username</string>
    <string name="profile_framgnet_coffee_pref_hint">Coffee Preference</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coffee_pref_hey_coffee_lover">Hey, coffee lover!</string>
    <string name="coffee_pref_question_one">What is your favorite coffee roast?</string>
    <string name="coffee_pref_question_three">How many cups of coffee do you drink per day?</string>
    <string name="coffee_pref_question_two">What is your favorite coffee drink?</string>
    <string name="coffee_pref_question_four">What time of day do you usually drink coffee?</string>
    <string name="privacy_policy">Privacy Policy</string>

</resources>
