<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_logo_imageView"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/login_email_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        style="@style/AppEditText"
        android:id="@+id/login_email_editText"
        android:hint="@string/login_email_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/login_password_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_logo_imageView" />

    <EditText
        style="@style/AppEditText"
        android:id="@+id/login_password_editText"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email_editText" />

    <Button
        style="@style/AppButton"
        android:id="@+id/login_button"
        android:layout_marginTop="24dp"
        android:text="@string/login_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_editText"
        app:layout_constraintBottom_toTopOf="@+id/login_sign_up_textview"/>

    <TextView
        android:id="@+id/login_sign_up_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="150dp"
        android:fontFamily="sans-serif"
        android:text="@string/login_sign_up_textview"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        android:foreground="?attr/selectableItemBackground"/>

</android.support.constraint.ConstraintLayout>